--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
+    "@next/font": "^13.1.1",
     "@prisma/client": "^4.5.0",
     "@tanstack/react-query": "^4.16.0",
     "@tanstack/react-query-devtools": "^4.20.4",
@@ -20,17 +21,22 @@
     "@trpc/next": "^10.0.0",
     "@trpc/react-query": "^10.0.0",
     "@trpc/server": "^10.0.0",
+    "class-variance-authority": "^0.4.0",
     "next": "13.1.1",
     "next-auth": "^4.18.3",
     "nodemailer": "^6.8.0",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "superjson": "1.9.1",
     "trpc-playground": "^1.0.1",
     "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/node": "^18.0.0",
+    "@types/nprogress": "^0.2.0",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
@@ -48,6 +54,7 @@
     "prettier-plugin-tailwindcss": "^0.2.1",
     "prisma": "^4.5.0",
     "tailwindcss": "^3.2.0",
+    "tailwindcss-animate": "^1.0.5",
     "typescript": "^4.8.4"
   },
   "ct3aMetadata": {
